<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.Siwar.siwar_application.Edit_info_Admin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/ColorBase"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_chevron_left_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableRight="@drawable/ic_baseline_settings_24"
            android:gravity="center"
            android:text="@string/Edit_info"
            android:textSize="@dimen/FontSize_Title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <EditText
                android:id="@+id/userName"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:background="@drawable/textbox_shap"
                android:ems="10"
                android:gravity="right"
                android:inputType="textPersonName"
                android:padding="@dimen/padding" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passWord"
                    android:layout_width="180dp"
                    android:layout_height="30dp"

                    android:background="@drawable/textbox_shap"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding" >

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="20dp"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Conf_passWord"
                    android:layout_width="180dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/textbox_shap"
                    android:ems="10"
                    android:gravity="right"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding" >

                </com.google.android.material.textfield.TextInputEditText>


            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/Fullname"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textbox_shap"
                android:ems="10"
                android:gravity="right"
                android:inputType="text"
                android:padding="@dimen/padding" />


            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="30dp"

                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Birthday"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_shap"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="right"
                    android:padding="@dimen/padding" />

                <TextView
                    android:id="@+id/datePicker"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/textbox_shap"
                    android:drawableRight="@drawable/ic_baseline_date_range_24"
                    android:gravity="center" />
            </LinearLayout>


            <EditText
                android:id="@+id/Email"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textbox_shap"
                android:ems="10"
                android:gravity="right"
                android:inputType="textEmailAddress"
                android:padding="@dimen/padding" />

            <EditText
                android:id="@+id/number_Mang"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/textbox_shap"
                android:ems="10"
                android:enabled="false"
                android:gravity="right"
                android:inputType="number"
                android:padding="@dimen/padding" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/userName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingRight="10dp"
                android:text="@string/passWord"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingRight="10dp"
                android:text="@string/ConfPassWord"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:text="@string/FullName"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingRight="10dp"
                android:text="@string/BrithDay"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:text="@string/Emil"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingRight="10dp"
                android:text="@string/NumberMang"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveChang"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/shap_butten1"
            android:text="@string/SaveChang" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/shap_butten1"
            android:text="@string/Cancel" />
    </LinearLayout>


</LinearLayout>